--- a/myCssExercices/boxTextHover/index.html
+++ b/myCssExercices/boxTextHover/index.html
@@ -12,7 +12,7 @@
     <body>
         <h1>Hello World<span>.</span></h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, qui officia nobis temporibus assumenda veniam dolor est.</p>
-        <a href="#">Button</a>
+        <p>Lorem ipsum dolor sit amet, <span>adipisicing</span> elit. Adipisci, qui officia <span>nobis</span> temporibus assumenda veniam dolor est.</p>
+        <a href="#"><span>Button</span></a>
     </body>
 </html>
