--- a/myCssExercices/CSS-pixel-perfect/index.html
+++ b/myCssExercices/CSS-pixel-perfect/index.html
@@ -11,10 +11,19 @@
 
 </head>
 <body>
+    <div class="bg">
     <div class="container">
         <h1>I am a H1</h1>
-        <h2>I am H2</h2><br>
+        <h2>I am H2</h2>
         <p>i <span>am</span> p</p>
+        <div class="card">
+            <img id="profile" src="./Images/profile.png" alt="image profile">
+            <p id="name">John Doe</p>
+            <p id="title">Chief executive manager</p>
+            <img id="linkedin" src="./Images/linkedin.png" alt="image linkedin">
+            <img id="whatsapp" src="./Images/whatsapp.png" alt="image whatsapp">
+        </div>
+    </div>
     </div>
     <footer>
         <p>I am such a beautiful footer.</p>
