--- a/myCssExercices/Flex Exercice/index.html
+++ b/myCssExercices/Flex Exercice/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Symbols:wght@100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -38,10 +41,14 @@
         <div class="tag">
             <p>FREE</p>
         </div>
+        <div class="forever">
+            <p>Forever !</p>
+        </div>
+        <div class="orangeCont">
+            <p>Get started</p>
+        </div>
     </div>
     
-    <div class="orangeCont">
-        <p>Get started</p>
-    </div>
+    
 </body>
 </html>
