commit repro website 16 may

--- a/myCssExercices/Reproduce Website/index.html
+++ b/myCssExercices/Reproduce Website/index.html
@@ -14,7 +14,7 @@
         <nav class="menu-nav">
         <img src="img/logo-87.svg" id="logo">
         <ul>
-            <li>HOME</li>
+            <li id="first-li">HOME</li>
             <li>ABOUT</li>
             <li>ARTICLES</li>
             <li>CONTACT</li>
@@ -35,6 +35,19 @@
             <div id="sec-block">
                 <img src="img/img_first_cont.png">
             </div>
+        </div>
+    </section>
+    <section class="white-block">
+        <h2> Latest news</h2>
+        <div class="cont-hr">
+        <hr id="last-hr">
+        </div>
+        <div class="sec-grid">
+            <img src="img/firstImg.png" alt="" id="first-img">
+            <img src="img/secImg.jpeg" alt="" id="sec-img">
+            <img src="img/thirdImg.jpeg" alt="" id="third-img">
+            <img src="img/fourthImg.jpeg" alt="" id="fourth-img">
+            <img src="img/lastImg.jpeg" alt="" id="last-img">
         </div>
     </section>
 </body>
