--- a/myCssExercices/Exercice_week_06_08_3/index.html
+++ b/myCssExercices/Exercice_week_06_08_3/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exo 2</title>
+    <title>Exo 3</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="flex-container">
+        <div class="grid-container">
             <div id="didi"></div>
             <div id="didi"></div>
             <div id="didi"></div>
