--- a/myCssExercices/Final_css_project/index.html
+++ b/myCssExercices/Final_css_project/index.html
@@ -27,9 +27,47 @@
     <main>
         <div class="grid-main">
             <div id="grid-sec">
-                <img src="img/img1.png" alt="img1">
+                <div id="item1"><img src="img/img1.png" alt="" id="img1"></div>
+                <h1 id="h1-web">The Bright Future of  Web 3.0?</h1>
+                <div id="p-grid">
+                <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+                <p id="btn">READ MORE</p>
+                </div>
+            </div>
+            <div class="black-cont"> 
+                <h2 id="title-bc">New</h2>
+                <div id="content-p">
+                    <h4 id="Hydro-title">Hydrogen VS Electric Cars</h4>
+                    <p id="prem-p">Will hydrogen-fueled cars ever catch up to EVs?</p>
+                    <div id="linear"></div>
+                    <h4 id="Down-title"> The Downsides of AI Artistry</h4>
+                    <p id="sec-p">What are the possible adverse effects of on-demand AI image generation?</p>
+                    <div id="linear"></div>
+                    <h4 id="VC-title">Is VC Funding Drying Up?</h4>
+                    <p id="third-p">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+                </div>
+
             </div>
         </div>
+        <section>
+            <div class="last-grid">
+                <div id="grid1">
+                    <div id="grid1-1">
+                        <img src="img/Bitmap.jpg" alt="">
+                    </div>
+                </div>
+                <div id="grid2">
+                    <div id="grid2-1">
+                        <img src="img/Bitmap (1).jpg" alt="">
+                    </div>
+                </div>
+                <div id="grid3">
+                    <div id="grid3-1">
+                        <img src="img/Bitmap (3).jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
