save_final_project_2

--- a/myCssExercices/Final_css_project/index.html
+++ b/myCssExercices/Final_css_project/index.html
@@ -52,19 +52,28 @@
         <section>
             <div class="last-grid">
                 <div id="grid1">
-                    <div id="grid1-1">
-                        <img src="img/Bitmap.jpg" alt="">
-                    </div>
+                        <img src="img/Bitmap.jpg" alt="" id="bit1">
+                        <div id="p-grid2">
+                            <h3>01</h3>
+                            <h5>Reviving Retro PCs</h5>
+                            <p>What happens when old PCs are given modern upgrades?</p>
+                        </div>
                 </div>
-                <div id="grid2">
-                    <div id="grid2-1">
-                        <img src="img/Bitmap (1).jpg" alt="">
-                    </div>
+                <div id="grid1">
+                        <img src="img/Bitmap (1).jpg" alt="" id="bit1">
+                        <div id="p-grid2">
+                            <h3>02</h3>
+                            <h5>Top 10 Laptops of 2022</h5>
+                            <p>Our best picks for various needs and budgets.</p>
+                        </div>
                 </div>
-                <div id="grid3">
-                    <div id="grid3-1">
-                        <img src="img/Bitmap (3).jpg" alt="">
-                    </div>
+                <div id="grid1">
+                        <img src="img/Bitmap (3).jpg" alt="" id="bit1">
+                        <div id="p-grid2">
+                            <h3>03</h3>
+                            <h5>The Growth of Gaming</h5>
+                            <p>How the pandemic has sparked fresh opportunities.</p>
+                        </div>
                 </div>
             </div>
         </section>
