--- a/myCssExercices/Final_css_project/index.html
+++ b/myCssExercices/Final_css_project/index.html
@@ -10,10 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="main-cont">
     <header>
         <div class="cont-head">
             <nav class="menu-nav">
                 <img src="img/logo.svg" id="logo">
+                <img src="img/Group.svg" id="hamburger-menu">
                 <ul>
                     <li>Home</li>
                     <li>New</li>
@@ -78,8 +80,6 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    </div>
 </body>
 </html>
