save-ultimate-project-sec-cont-1

--- a/myCssExercices/ultimate-exo/index.html
+++ b/myCssExercices/ultimate-exo/index.html
@@ -38,6 +38,23 @@
                         <p id="btn-2">Know more</p>
                     </div>
             </div>
+            <div class="grid1">
+                <img src="img/pic 1.svg" id="img-grid1">
+                <div id="p-grid"> 
+                    <p id="p-1">Lorem</p>
+                    <p id="p-2">Lorem ipsum sec
+                        ad no meticulus</p>
+                    <p id="p-3">Lorem ipsum dolor sit, amet consectetur 
+                        adipisicing elit. Adipisci nulla cupiditate 
+                        rerum harum.</p>
+                    <p id="p-4">Lorem ipsum dolor sit, amet consectetur adipisicing 
+                        elit. Beatae laudantium mollitia delectus, voluptate 
+                        nobis perferendis vel atque similique a, vitae ullam 
+                        doloribus et ducimus obcaecati voluptatem quia temporibus 
+                        consequatur alias?</p>
+                        <p id="btn-1">Get started</p>
+                </div>
+            </div>
         </main>
         <footer>
 
