--- a/Week-07/Ex13/index.html
+++ b/Week-07/Ex13/index.html
@@ -8,25 +8,29 @@
 </head>
 <body>
     <div class="container">
-        <form>
-            <label for="username">Username</label>
-            <p class="msg"></p>
-            <input type="text" id="username" name="username" placeholder="Ex: Dekkarte" required>
-            <br>
-            <br>
-            <label for="email">Email</label>
-            <p class="msg"></p>
-            <input type="email" id="email" name="email" placeholder="Ex: hello@gmail.com" required>
-            <br><br>
-            <label for="password">Password</label>
-            <p class="msg"></p>
-            <input type="password" name="password" id="password" placeholder="***********" required>
-            <br><br>
+        <form id="registerForm">
+            <h2>Form validation</h2>
+            <div class="group-item">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Ex: Dekkarte">
+                <p class="msg"></p>
+            </div>
+            <div class="group-item">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Ex: hello@gmail.com">
+                <p class="msg"></p>
+            </div>
+            <div class="group-item">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" placeholder="***********">
+                <p class="msg"></p>
+            </div>
+            <div class="group-item">
             <label for="confirm_password">Confirm Password</label>
+            <input type="password" name="confirm_password" id="confirm_password" placeholder="***********">
             <p class="msg"></p>
-            <input type="password" name="confirm_password" id="confirm_password" placeholder="***********" required >
-            <br><br>
-            <input type="submit" name="submit" id="submit" value="Submit all">
+            </div>
+            <input type="submit" name="submit" id="submit" value="SUBMIT">
         </form>
     </div>
     <script src="app.js"></script>
