--- a/WEEK-08/Ex01/Index.html
+++ b/WEEK-08/Ex01/Index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TODO LIST</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>TODO LIST</h1>
-    <script src="app.js"></script>
     <input type="text" id="item-added" placeholder="Add todo">
-    <button>add</button>
+    <button id="add-item">add</button>
     <ul id="task-list"></ul>
+
+
+    <script src="app.js"></script>
 </body>
 </html>
