--- a/WEEK-09/16/index.html
+++ b/WEEK-09/16/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Exercice</title>
+    <title>Final Exercise</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -14,26 +14,53 @@
             <div class="meal-search">
                 <h2 class="title">Find meals for your ingredients</h2>
                 <div class="meal-search-box">
-                    <input type="text" class="search-content" placeholder="Enter an ingredient" id="search-input">
-                    <button type="submit" class="seach-btn btn" id="search-btn"><i class="fas fa-search"></i></button>
+                    <input type="text" class="search-control" placeholder="Enter an ingredient" id="search-input">
+                    <button type="submit" class="search-btn btn" id="search-btn"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         
             <div class="meal-result">
                 <h2 class="title">Your search results:</h2>
-                <div class="meal">
-                    <div class="meal-item">
-                        <div class="meal-img">
-                            <img src="/img/food.jpeg" alt="food">
-                            <h3>Potato chips</h3>
-                            <a href="#" class="recipe-btn">Get recipe</a>
+                <div id="meal">
+            <!-- meal item -->
+            <!-- <div class = "meal-item">
+                        <div class = "meal-img">
+                          <img src = "food.jpg" alt = "food">
                         </div>
-                    </div>
+                        <div class = "meal-name">
+                          <h3>Potato Chips</h3>
+                          <a href = "#" class = "recipe-btn">Get Recipe</a>
+                        </div>
+                      </div> -->
+            <!-- end of meal item -->
                 </div>
-        </div>
+            </div>
+
+            <div class="meal-details">
+                <button type="button" class="btn recipe-close-btn" id="recipe-close-btn">
+                    <i class="fas fa-times"></i>
+                </button>
+
+                <div class="meal-details-content">
+                    <!-- <h2 class="recipe-title">Meals name Here</h2>
+                    <p class="recipe-category">Category Name</p>
+                    <div class="recipe-instruct">
+                        <h3>Instructions:</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione nesciunt eius error reiciendis quasi esse officiis maxime. Totam repellendus maxime fugiat laboriosam ad autem debitis fuga harum unde, sed aliquam?</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et labore sint numquam perferendis eveniet praesentium pariatur voluptas maxime earum repellendus.</p>
+
+                    </div>
+                    <div class="recipe-meal-img">
+                        <img src="img/food.jpeg" alt="">
+                    </div>
+                    <div class="recipe-link">
+                        <a href="#" target="_blank">Watch Video</a>
+                    </div> -->
+                </div>
+
+            </div>
         </div>
     </div>
-
 
     <script src="app.js"></script>
 </body>
